# cubby-lm

./: .gitignore  CKPT_WIRING.md  CLAUDE.md  README.md  finetune_identity.ps1  gen_grilly.ps1  main.py  pyproject.toml  run_mbpe_grilly.ps1  test_attn_direct.py  test_resident_attention.py  test_tiny_mbpe_attn.py
.qwen/: settings.json  settings.json.orig
.qwen/skills/auto-skill-architecture-tokenizer-dual-head/: SKILL.md
brain/: event_snn.py  test_event_snn.py
cubby/: ROADMAP.md  config.py  test_trace.py  tokenizer.py  trace.py
cubby/tokenizers/cubby_mbpe32k/: tokenizer.json
cubby/tools/: emit_eval.py  train_tokenizer.py
cubby/trunk/: checkpoint.py  ffn.py  gpu_linear.py  model.py  resident.py  test_attention.py  test_attention_bwd.py  test_attention_debug.py  test_attention_integration.py  test_checkpoint.py  test_ffn.py  test_model.py  test_parity.py  train.py
data/: safety_corpus_v0.jsonl
docs/: ARCHITECTURE.md  ARCHITECTURE_continuation_vm_snn.md  TRUNK_VM_EMISSION_CONTRACT.md  why_sparse_cubby.md
experiments/ffn_compression/: NOTES.md
experiments/perf/: NOTES.md  bench_adamw.py  profile_step.py
experiments/vsa_ffn/: collapse_proof.py
